--- a/ch13_quadtree/Makefile
+++ b/ch13_quadtree/Makefile
@@ -1,14 +1,12 @@
 FLAGS = -std=c++14 -I~/Dropbox/src/
 
-main : main.cu ./build/ch13_quadtree.o ch13_quadtree.cuh
-	nvcc $(FLAGS) -o main main.cu ./build/ch13_quadtree.o
 
 
-test : test.cu ./build/ch13_quadtree.o ch13_quadtree.cuh
-	nvcc $(FLAGS) -o test test.cu ./build/ch13_quadtree.o
 
-./build/ch13_quadtree.o : ch13_quadtree.cu
-	nvcc $(FLAGS) -c -o ./build/ch13_quadtree.o ch13_quadtree.cu
+
+
+ch13_quadtree : ch13_quadtree.cu
+	nvcc $(FLAGS)  -o ch13_quadtree ch13_quadtree.cu
 
 points_test : points_test.cu ./build/points.o points.cuh
 	nvcc $(FLAGS) -o points_test points_test.cu ./build/points.o
@@ -21,3 +19,9 @@ bounding_box_test : bounding_box_test.cu ./build/bounding_box.o bounding_box.cuh
 
 ./build/bounding_box.o : bounding_box.cu
 	nvcc $(FLAGS) -c -o ./build/bounding_box.o bounding_box.cu 
+
+./build/quad_tree_node.o : quad_tree_node.cu quad_tree_node.cuh boundind_box.cuh
+	nvcc $(FLAGS) -c -o ./build/quad_tree_node.o quad_tree_node.cu
+
+./build/parameters.o : parameters.cu parameters.cuh
+	nvcc $(FLAGS) -c -o ./build/parameters.o parameters.cu
