--- a/ch13_quadtree/Makefile
+++ b/ch13_quadtree/Makefile
@@ -6,7 +6,7 @@ FLAGS = -std=c++14 -I~/Dropbox/src/
 
 
 ch13_quadtree : ch13_quadtree.cu ./build/points.o ./build/bounding_box.o  ./build/quad_tree_node.o   ./build/parameters.o
-	nvcc $(FLAGS)  -o ch13_quadtree ch13_quadtree.cu ./build/points.o ./build/boundind_box.o  ./build/quad_tree_node.o  ./build/parameters.o
+	nvcc $(FLAGS)  -o ch13_quadtree ch13_quadtree.cu ./build/points.o ./build/bounding_box.o  ./build/quad_tree_node.o  ./build/parameters.o
 
 points_test : points_test.cu ./build/points.o points.cuh
 	nvcc $(FLAGS) -o points_test points_test.cu ./build/points.o
@@ -20,7 +20,7 @@ bounding_box_test : bounding_box_test.cu ./build/bounding_box.o bounding_box.cuh
 ./build/bounding_box.o : bounding_box.cu
 	nvcc $(FLAGS) -c -o ./build/bounding_box.o bounding_box.cu 
 
-./build/quad_tree_node.o : quad_tree_node.cu quad_tree_node.cuh boundind_box.cuh
+./build/quad_tree_node.o : quad_tree_node.cu quad_tree_node.cuh bounding_box.cuh
 	nvcc $(FLAGS) -c -o ./build/quad_tree_node.o quad_tree_node.cu
 
 ./build/parameters.o : parameters.cu parameters.cuh
