--- a/ch13_quadtree/Makefile
+++ b/ch13_quadtree/Makefile
@@ -1,4 +1,5 @@
-FLAGS = -std=c++14 -I~/Dropbox/src -arch=sm_35
+FLAGS = -std=c++14 -I~/Dropbox/src -arch=sm_35 -rdc=true
+LIBS = -lcudadevrt
 
 
 
@@ -6,16 +7,19 @@ FLAGS = -std=c++14 -I~/Dropbox/src -arch=sm_35
 
 
 ch13_quadtree : ch13_quadtree.cu ./build/points.o ./build/bounding_box.o  ./build/quad_tree_node.o   ./build/parameters.o
-	nvcc $(FLAGS)  -o ch13_quadtree ch13_quadtree.cu ./build/points.o ./build/bounding_box.o  ./build/quad_tree_node.o  ./build/parameters.o
+	nvcc $(FLAGS)  -o ch13_quadtree ch13_quadtree.cu ./build/points.o ./build/bounding_box.o  ./build/quad_tree_node.o  ./build/parameters.o $(LIBS)
 
 points_test : points_test.cu ./build/points.o points.cuh
-	nvcc $(FLAGS) -o points_test points_test.cu ./build/points.o
+	nvcc $(FLAGS) -o points_test points_test.cu ./build/points.o $(LIBS)
+
 
 ./build/points.o : points.cu
-	nvcc $(FLAGS) -c -o ./build/points.o points.cu
+	nvcc $(FLAGS) -c -o ./build/points.o points.cu $(LIBS)
+
 
 bounding_box_test : bounding_box_test.cu ./build/bounding_box.o bounding_box.cuh
-	nvcc $(FLAGS) -o bounding_box_test bounding_box_test.cu ./build/bounding_box.o
+	nvcc $(FLAGS) -o bounding_box_test bounding_box_test.cu ./build/bounding_box.o $(LIBS)
+
 
 ./build/bounding_box.o : bounding_box.cu
 	nvcc $(FLAGS) -c -o ./build/bounding_box.o bounding_box.cu 
