--- a/ch13_quadtree/Makefile
+++ b/ch13_quadtree/Makefile
@@ -22,10 +22,13 @@ bounding_box_test : bounding_box_test.cu ./build/bounding_box.o bounding_box.cuh
 
 
 ./build/bounding_box.o : bounding_box.cu
-	nvcc $(FLAGS) -c -o ./build/bounding_box.o bounding_box.cu 
+	nvcc $(FLAGS) -c -o ./build/bounding_box.o bounding_box.cu  $(LIBS)
+ 
 
 ./build/quad_tree_node.o : quad_tree_node.cu quad_tree_node.cuh bounding_box.cuh
-	nvcc $(FLAGS) -c -o ./build/quad_tree_node.o quad_tree_node.cu
+	nvcc $(FLAGS) -c -o ./build/quad_tree_node.o quad_tree_node.cu  $(LIBS)
+
 
 ./build/parameters.o : parameters.cu parameters.cuh
-	nvcc $(FLAGS) -c -o ./build/parameters.o parameters.cu
+	nvcc $(FLAGS) -c -o ./build/parameters.o parameters.cu  $(LIBS)
+
